--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@
                       <div class="row">
                         <div class="col-md-8 col-lg-6">
                           <h1 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Hello,</span> I'm Akbar</h1>
-                          <a class="popup-youtube"  href="#"><span class="icon ion-ios-play"></span>Watch video </a>
+                          <a class="popup-youtube"  href="#"><span class="icon ion-ios-play"></span> </a>
+                          
+                            <a class="link_button_2" href="https://drive.google.com/file/d/1mU1UmX2IqF0rhocK2cmVyxM1BvPPZy9f/view?usp=sharing">
+                              <b>DOWNLOAD RESUME</b>
+                            </a>
+                  
                         </div>
                       </div>
                     </div>
@@ -157,9 +162,11 @@
                         </div>
                       </div>
                       <div class="view-all">
-                        <a href="https://drive.google.com/file/d/1mU1UmX2IqF0rhocK2cmVyxM1BvPPZy9f/view?usp=sharing">
-                          Download resume
-                        </a>
+                        <div class="link_button">
+                          <a href="https://drive.google.com/file/d/1mU1UmX2IqF0rhocK2cmVyxM1BvPPZy9f/view?usp=sharing">
+                            <b>DOWNLOAD RESUME</b>
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -317,35 +324,35 @@
                       <div class="row">
                         <div class="col-md-12">
                           <div class="project-row">
-                            <a class="active" href="project-detail.html">
+                            <a class="active" href="#">
                               <span class="project-number">01</span>
                               <h2 class="project-title">Laron (Laris Online)</h2>
                               <div class="project-category">UX/UI Design</div>
                             </a>
                           </div>
                           <div class="project-row">
-                            <a href="project-detail.html">
+                            <a href="#">
                               <span class="project-number">02</span>
                               <h2 class="project-title">Si-Pus</h2>
                               <div class="project-category">UI/UI Design</div>
                             </a>
                           </div>
                           <div class="project-row">
-                            <a href="project-detail.html">
+                            <a href="#">
                               <span class="project-number">03</span>
                               <h2 class="project-title">Story Of Nature Spirit</h2>
                               <div class="project-category">UX/UI Design</div>
                             </a>
                           </div>
                           <div class="project-row">
-                            <a href="project-detail.html">
+                            <a href="#">
                               <span class="project-number">04</span>
                               <h2 class="project-title">Expense Manager App</h2>
                               <div class="project-category">UX/UI Design</div>
                             </a>
                           </div>
                           <div class="view-all view-all-projects">
-                            <a  href="projects.html">
+                            <a  href="#">
                               View all projects
                             </a>
                           </div>
